ocaso/environments/rhacm/deployment.yaml
---
# Source: ocaso-nginx-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocaso-hello-app-rhacm
  labels:
    app.kubernetes.io/name: ocaso-hello-app-rhacm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ocaso-hello-app-rhacm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ocaso-hello-app-rhacm
    spec:
      containers:
        - name: ocaso-hello-app-rhacm
          image: nginxdemos/nginx-hello:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            null
