ocaso/environments/rhacm/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ocaso-hello-app-rhacm
  name: ocaso-hello-app-rhacm
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: ocaso-hello-app-rhacm
  type: ClusterIP
