ocaso/environments/rhacm/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocaso-hello-app-rhacm
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ocaso-hello-app-rhacm
